Fixed Skills position on mobile screen and invaders appearance probability in games

--- a/public/import/assets/css/cv.css
+++ b/public/import/assets/css/cv.css
@@ -1,7 +1,7 @@
 #portfolio:before {
     content: '';
     position: absolute;
-    top: -170px;
+    top: -160px;
     left: 0;
     width: 100%;
     height: 170px;
@@ -17,7 +17,7 @@
 #portfolio {
     background: black;
     position: relative;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
 }
 
 .dot {
