--- a/public/import/assets/css/service.css
+++ b/public/import/assets/css/service.css
@@ -1,7 +1,7 @@
 .skillStart:before {
     content: '';
     position: absolute;
-    top: 0px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 170px;
@@ -21,8 +21,8 @@
     background-size: cover;
     -o-background-size: cover;
     position: relative;
-    padding-bottom: 80px;
-    padding-top: 30px;
+    padding-bottom: 120px;
+    padding-top: 60px;
 }
 
 .services-block span {
@@ -38,7 +38,7 @@
 
 .services-block .separator {
     margin: 0;
-    font-size: 13px;
+    font-size: 17px;
     line-height: 22px;
 }
 
@@ -122,3 +122,9 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    #services {
+        background-size: cover;
+        background-position: center top;
+    }
+}
